--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -10,7 +10,7 @@
   font-size: 14px;
   font-weight: 400;
   margin: 0 auto;
-  max-width: 280px;
+  max-width: 250px;
 }
 
 @media (min-width: @tablet-width) {
@@ -24,10 +24,6 @@
     line-height: 30px;
     max-width: 440px;
   }
-
-  .agitation__text br {
-    display: none;
-  }
 }
 
 @media (min-width: @desktop-width) {
@@ -39,4 +35,8 @@
   .agitation__text {
     max-width: 575px;
   }
+}
+
+.logoq:hover {
+  fill: red;
 }
