--- a/source/less/blocks/general.less
+++ b/source/less/blocks/general.less
@@ -19,6 +19,7 @@ a {
 
 @media (min-width: @desktop-width) {
   .wrapper {
+    box-sizing: border-box;
     max-width: 960px;
     padding: 0 10px;
   }
