--- a/source/less/blocks/social-links.less
+++ b/source/less/blocks/social-links.less
@@ -11,6 +11,15 @@
   border-radius: 50%;
 }
 
+.social-links__item:hover {
+  border: 3px solid #283645;
+}
+
+.social-links__item:active {
+  border: 3px solid #e9ebec;
+  opacity: 0.3;
+}
+
 .social-links__item--tw {
   background: url("../img/icon-twitter.svg") no-repeat 50%;
 }
