--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -52,7 +52,7 @@
   }
 
   .user-photo__comment {
-    padding-bottom: 9px;
+    padding-bottom: 10px;
     position: relative;
   }
 
@@ -75,7 +75,7 @@
   .user-photo__comment-wrapper {
 
     padding-left: 27px;
-    padding-bottom: 14px;
+    padding-bottom: 13px;
   }
 }
 
@@ -86,14 +86,15 @@
 
   .user-photo--panorama {
     width: 100%;
-    margin-bottom: 25px;
-  }
-
-  .user-photo__item {
-    outline: 2px solid red;
+    margin-bottom: 49px;
   }
 
   .user-photo__comment-panorama {
     max-width: 940px;
+  }
+
+  .user-photo__name {
+    top: 53px;
+    right: 10px;
   }
 }
