--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -1,11 +1,4 @@
-
-// .logo-wrapper::before {
-//   content: "";
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   background: red;
-//   opacity: 0.4;
-// }
+.logo-wrapper {
+  background: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid #000001;
+}
