--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,24 +1,20 @@
-.page-footer {
-  padding-top: 40px;
+.page-footer__logo {
+  width: 150px;
+  margin-bottom: 33px;
+}
 
-  &__logo {
-    width: 150px;
-    margin-bottom: 33px;
-  }
+.page-footer__social-links {
+  width: 150px;
+  height: 55px;
+  margin-bottom: 46px;
+}
 
-  &__social-links {
-    width: 150px;
-    height: 55px;
-    margin-bottom: 40px;
-  }
+.page-footer__develop {
+  width: 154px;
+}
 
-  &__develop {
-    width: 154px;
-  }
-
-  &--index {
-    display: none;
-  }
+.page-footer--index {
+  display: none;
 }
 
 .page-footer__wrapper {
@@ -33,32 +29,34 @@
   color: #283645;
   line-height: 18px;
   margin-left: 11px;
-
-  // background: url("../img/htmlacademy2.svg") no-repeat 74% 16px;
 }
 
-// .page-footer__develop-link::after{
-//   content: "";
-//   display: block;
-// }
-
 .page-footer__develop-link-icon {
-  /* position: absolute; */
-  /* outline: 2px solid black; */
-  width: 28px;
-  /* height: 5px; */
-  /* top: 3px; */
-  margin-left: 11px;
-  vertical-align: middle;
+  position: absolute;
+  width: 40px;
+  top: -15px;
+  right: 7px;
+}
+
+.page-footer__develop-link-icon:hover {
+  path {
+    fill: #283645;
+  }
+}
+
+.page-footer__develop-link-icon:active {
+  path {
+    fill: #bec2c7;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .page-footer {
     padding: 0;
+  }
 
-    &--index {
-      display: block;
-    }
+  .page-footer--index {
+    display: block;
   }
 
   .page-footer__wrapper {
@@ -83,7 +81,7 @@
 
   .page-footer__develop {
     padding: 0;
-    text-align: right;
+    width: 150px;
   }
 
   .page-footer__develop-link {
@@ -94,27 +92,33 @@
   }
 
   .page-footer__develop-link-icon {
-    width: 27px;
-    vertical-align: middle;
-    margin-left: 8px;
+    top: 0;
+    right: -7px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-footer{
-    margin-top: 65px;
-  }
+  // .page-footer {
+  //   margin-top: 65px;
+  // }
+
   .page-footer__wrapper {
+    box-sizing: border-box;
     max-width: 940px;
     min-height: 110px;
   }
 
   .page-footer__develop {
-    padding-top: 21px;
+    padding-top: 10px;
+    width: 153px;
   }
 
   .page-footer__develop-link {
     padding: 0;
     font-size: 18px;
+  }
+
+  .page-footer__develop-link-icon {
+    top: -12px;
   }
 }
