--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,22 +1,15 @@
-.photo {
-  &__wrapper-image {
-    // background-image: url("../img/bg-back-mobile@1x.jpg");
-    // background-color: #2b3b4b;
-    // background-repeat: no-repeat;
-    min-height: 170px;
-  }
+.photo__wrapper-image {
+  min-height: 240px;
 }
 
 @media (min-width: 660px) {
   .photo__wrapper-image {
-    min-height: 329px;
-    // background: url("../img/bg-back-tablet@1x.jpg");
+    min-height: 399px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo__wrapper-image {
-    min-height: 289px;
-    // background: url("../img/bg-back-desktop@1x.jpg");
+    min-height: 284px;
   }
 }
