--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,7 @@
 @import "blocks/agitation.less";
 @import "blocks/comment.less";
 @import "blocks/download.less";
-@import "blocks/fonts.less";
+@import "fonts.less";
 @import "blocks/logo-wrapper.less";
 @import "blocks/main-nav.less";
 @import "blocks/offer.less";
